--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<h3>What's jEnv ?</h3>
 				</header>
 				<div class="span9 ">
-					<p class="welcome">jEnv is a command line tool to help you to forget to set the environment variable</p>
+					<p class="welcome">jEnv is a command line tool to help you forget how to set the JAVA_HOME environment variable</p>
 					
 				</div>
 			</article>
