--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 						<pre class="code">$ git clone https://github.com/gcuisinier/jenv.git ~/.jenv</pre>
 					<h4>Mac OS X</h4>
 						<pre class="code">$ brew install https://raw.github.com/gcuisinier/jenv/homebrew/jenv.rb</pre>
+						or
+						<pre class="code">$ brew tap jenv/jenv
+$ brew install jenv</pre>
 				</div>
 			</article>
 
