update brew installation

--- a/index.html
+++ b/index.html
@@ -71,10 +71,8 @@
 				<div class="span9">
 					<h4>Linux / OS X</h4>
 						<pre class="code">$ git clone https://github.com/gcuisinier/jenv.git ~/.jenv</pre>
-					<h4>Mac OS X</h4>
-						<pre class="code">$ brew install https://raw.github.com/gcuisinier/jenv/homebrew/jenv.rb</pre>
-						or
-						<pre class="code">$ brew tap jenv/jenv
+					<h4>Mac OS X via <a href="http://brew.sh/">Homebrew</h4>
+						<pre class="code">
 $ brew install jenv</pre>
 				</div>
 			</article>
@@ -124,6 +122,8 @@ oracle64-1.7.0.11 added</pre>
 						<pre class="code">$ jenv shell oracle64-1.6.0.39</pre>	
 				</div>
 			</article>
+
+			
 
 <article class="row-fluid">
 				
