Add closing anchor tag to homebrew link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<div class="span9">
 					<h4>Linux / OS X</h4>
 						<pre class="code">$ git clone https://github.com/gcuisinier/jenv.git ~/.jenv</pre>
-					<h4>Mac OS X via <a href="http://brew.sh/">Homebrew</h4>
+						<h4>Mac OS X via <a href="http://brew.sh/">Homebrew</a></h4>
 						<pre class="code">
 $ brew install jenv</pre>
 				</div>
