--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+
+		<script type="text/javascript">
+/* <![CDATA[ */
+    (function() {
+        var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
+        s.type = 'text/javascript';
+        s.async = true;
+        s.src = 'http://api.flattr.com/js/0.6/load.js?mode=auto';
+        t.parentNode.insertBefore(s, t);
+    })();
+/* ]]> */</script>
+
 	</head>
 
 	<body>
@@ -44,7 +56,8 @@
 					<h2>Manage your Java environment</h2>
 				</div>
 				<div class="social offset1 span4">
-					<ul>
+					<ul>	
+						<li><a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://github.com/gcuisinier/jenv"></a></li>
 						<li><i class="icon-home"></i><a href="http://www.jenv.be">http://www.jenv.be</a></li>
 						<li><i class="icon-github"></i><a href="https://github.com/gcuisinier/jenv">https://github.com/gcuisinier/jenv</a></li>
 						<li><i class="icon-twitter"></i><a href="https://twitter.com/gcuisinier">@gcuisinier</a></li>
