--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ $ jenv versions
 					<h4>Source code</h4>
 					<p>
 						The project is Open Source and open to external contributions.
-						<br/>Do no hesitate to clone it and propose a pull request.
+						<br/>Do not hesitate to clone it and propose a pull request.
 					</p>
 					<ul style="padding-top:10px">
 						<li>
