Fix repository path

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 				</div>
 				<div class="social offset1 span4">
 					<ul>	
-						<li><a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://github.com/gcuisinier/jenv"></a></li>
+						<li><a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://github.com/jenv/jenv"></a></li>
 						<li><i class="icon-home"></i><a href="http://www.jenv.be">http://www.jenv.be</a></li>
-						<li><i class="icon-github"></i><a href="https://github.com/gcuisinier/jenv">https://github.com/gcuisinier/jenv</a></li>
+						<li><i class="icon-github"></i><a href="https://github.com/gcuisinier/jenv">https://github.com/jenv/jenv</a></li>
 						<li><i class="icon-twitter"></i><a href="https://twitter.com/gcuisinier">@gcuisinier</a></li>
 					</ul>
 				</div>
@@ -84,7 +84,7 @@
 				</header>
 				<div class="span9">
 					<h4>Linux / OS X</h4>
-					<pre class="code">$ git clone https://github.com/gcuisinier/jenv.git ~/.jenv</pre>
+					<pre class="code">$ git clone https://github.com/jenv/jenv.git ~/.jenv</pre>
 					<h4>Mac OS X via <a href="http://brew.sh/">Homebrew</a></h4>
 					<pre class="code">$ brew install jenv</pre>
 				</div>
@@ -164,8 +164,8 @@ $ jenv versions
 					<ul style="padding-top:10px">
 						<li>
 							<i class="icon-arrow-right"></i>
-							<a href="https://github.com/gcuisinier/jenv">
-								https://github.com/gcuisinier/jenv
+							<a href="https://github.com/jenv/jenv">
+								https://github.com/jenv/jenv
 							</a>
 						</li>
 					</ul>
