--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 			<article class="row-fluid">
 				<header class="span3">
-					<h3>Confiigure your shell</h3>
+					<h3>Configure your shell</h3>
 				</header>
 				<div class="span9">
 					<h4>Bash</h4>
